# kinect_video_recorder

./: CMakeLists.txt  README.md  package.xml
launch/: extract_rosbag.launch  record.launch  record_rosbag.launch  start_kinect.launch
scripts/: record.py  recorder.py
