<?xml version="1.0"?>
<package>
  <name>kinect_video_recorder</name>
  <version>0.0.0</version>
  <description>Recorder for TF frames, Kinet RGB, Kinect depth and webcams</description>
  <maintainer email="liyihui.ing@gmail.com">lyh458</maintainer>
  <license>TODO</license>
  <run_depend>openni_launch</run_depend>
  <run_depend>usb_cam</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
